--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@coreui/icons-react": "^2.3.0",
     "@coreui/react": "^5.7.0",
     "@supabase/supabase-js": "^2.50.0",
+    "axios": "^1.10.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
